# geohls2-py

./: 404.html  LICENSE  README.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: installation.yml
changelog/: index.html
common/: common.md  index.html
contributing/: index.html
docs/: contributing.md  installation.md
examples/intro/: index.html
faq/: index.html
geohls2_py/: __init__.py  geohls2_py.md  geohls2_py.py  index.html
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_geohls2_py.py
usage/: index.html  usage.md
